cmake_minimum_required(VERSION 2.8.11)
find_package(OpenCV REQUIRED)
set(vs_solution_name "test_cv_vs_solution")
set(vs_project_name "test_cv_vs_project")
set(mainfile "main8.cpp")
set(libfiles "src/KNN.cpp" "src/warp.cpp" "src/RANSAC.cpp" "src/scoreBoard.cpp" "src/parameter.cpp")
set(utilfiles "DevTool/util.cpp" "DevTool/utilCV.cpp" "DevTool/combination.cpp")
#gdb flag
set(CMAKE_BULID_TYPE Debug)
include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/DevTool)
#set(mainfile "SIFT_opencv2.4x.cpp")
project(${vs_solution_name} CXX)
add_executable(${vs_project_name} ${mainfile} ${libfiles} ${utilfiles})
#target_compile_features(${vs_project_name} PRIVATE cxx_range_for)
target_link_libraries(${vs_project_name} ${OpenCV_LIBS})
#include_directories(/home/limin/limin/ComputerVision/openCVtmp/opencv_contrib/modules/xfeatures2d/include)
